--- a/dev/layout/about_us.html
+++ b/dev/layout/about_us.html
@@ -2,43 +2,43 @@
 <!-- Start about_us-->
 <section class="section-about-us" id="about_us">
   <div class="container">
-    <div class="about-us_content who-are-we_column spolier_block">
-      <button class="spolier_button"></button>
-      <h3>
-         WHO ARE WE</h3>
-      <div class="spolier_text" tabindex="0">
-        <p>
-          We are a small self-motivated, proactive and innovative 
-          digital agency specializing on development and e-marketing of 
-          socially oriented commercial and non-profit web projects, 
-          able to convert ideas into solid web products of any complexity
-        </p>
-        <p>
-          Our team consists of dedicated, highly powered, experienced 
-          developers and creative designers with strong work ethic and 
-          productive attitude
-        </p>
-        <p>
-          We follow best programming practices and various technological 
-          approaches to meet quality standards to make websites interactive
-        </p>
-        <p>
-          We use methodological and systematic work process followed by 
-          the entire team to make sure that every single aspect of a project 
-          gets well-met in a most efficient way
-        </p>
-        <p>
-          We follow strategies where beautiful designs meet best usability
-          and functionality practices to create highly technological, user 
-          friendly and attractive web products
-        </p>
+    <div class="about-us_content">
+      <div class="about-us_column who-are-we_column spolier_block">
+        <h3>
+           WHO ARE WE</h3>
+        <button class="spolier_button"></button>
+        <div class="spolier_text">
+          <p>
+            We are a small self-motivated, proactive and innovative 
+            digital agency specializing on development and e-marketing of 
+            socially oriented commercial and non-profit web projects, 
+            able to convert ideas into solid web products of any complexity
+          </p>
+          <p>
+            Our team consists of dedicated, highly powered, experienced 
+            developers and creative designers with strong work ethic and 
+            productive attitude
+          </p>
+          <p>
+            We follow best programming practices and various technological 
+            approaches to meet quality standards to make websites interactive
+          </p>
+          <p>
+            We use methodological and systematic work process followed by 
+            the entire team to make sure that every single aspect of a project 
+            gets well-met in a most efficient way
+          </p>
+          <p>
+            We follow strategies where beautiful designs meet best usability
+            and functionality practices to create highly technological, user 
+            friendly and attractive web products
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="about-us_content goals-and-working_column">
-      <div class="goals_container spolier_block">
+      <div class="about-us_column goals_column spolier_block">
         <h3>OUR GOALS AND OBJECTIVES</h3>
         <button class="spolier_button"></button>
-        <div class="spolier_text" tabindex="0">
+        <div class="spolier_text">
           <p>Long term relations with customers and their full satisfaction</p>
           <p>Production of a solid product exceeding customer's expectations</p>
           <p>
@@ -47,10 +47,10 @@
           </p>
         </div>
       </div>
-      <div class="working_container spolier_block">
+      <div class="about-us_column working_column spolier_block">
         <h3>BENEFITS WORKING WITH US</h3>
         <button class="spolier_button"></button>
-        <div class="spolier_text" tabindex="0">
+        <div class="spolier_text">
           <p>Free and unlimited technical consultations during the project</p>
           <p>Up to 12h response time during business days and up to 24h on weekends</p>
           <p>
