--- a/dev/pug/layout/about_us.pug
+++ b/dev/pug/layout/about_us.pug
@@ -1,39 +1,38 @@
 // Start about_us
 section.section-about-us#about_us
   div.container
-    div.about-us_content.who-are-we_column.spolier_block
-      button.spolier_button
-      h3 
-        | WHO ARE WE
-      
-      div.spolier_text(tabindex='0')
-        p
-          | We are a small self-motivated, proactive and innovative 
-          | digital agency specializing on development and e-marketing of 
-          | socially oriented commercial and non-profit web projects, 
-          | able to convert ideas into solid web products of any complexity
-        p
-          | Our team consists of dedicated, highly powered, experienced 
-          | developers and creative designers with strong work ethic and 
-          | productive attitude
-        p
-          | We follow best programming practices and various technological 
-          | approaches to meet quality standards to make websites interactive
-        p
-          | We use methodological and systematic work process followed by 
-          | the entire team to make sure that every single aspect of a project 
-          | gets well-met in a most efficient way
-        p
-          | We follow strategies where beautiful designs meet best usability
-          | and functionality practices to create highly technological, user 
-          | friendly and attractive web products
-    
-    div.about-us_content.goals-and-working_column
-      div.goals_container.spolier_block
+    div.about-us_content
+      div.about-us_column.who-are-we_column.spolier_block
+        h3 
+          | WHO ARE WE
+        button.spolier_button
+        div.spolier_text
+          p
+            | We are a small self-motivated, proactive and innovative 
+            | digital agency specializing on development and e-marketing of 
+            | socially oriented commercial and non-profit web projects, 
+            | able to convert ideas into solid web products of any complexity
+          p
+            | Our team consists of dedicated, highly powered, experienced 
+            | developers and creative designers with strong work ethic and 
+            | productive attitude
+          p
+            | We follow best programming practices and various technological 
+            | approaches to meet quality standards to make websites interactive
+          p
+            | We use methodological and systematic work process followed by 
+            | the entire team to make sure that every single aspect of a project 
+            | gets well-met in a most efficient way
+          p
+            | We follow strategies where beautiful designs meet best usability
+            | and functionality practices to create highly technological, user 
+            | friendly and attractive web products
+
+      div.about-us_column.goals_column.spolier_block
         h3
           | OUR GOALS AND OBJECTIVES
         button.spolier_button
-        div.spolier_text(tabindex='0')
+        div.spolier_text
           p
             | Long term relations with customers and their full satisfaction
           p
@@ -41,12 +40,12 @@ section.section-about-us#about_us
           p
             | Provide best results with most appropriate technical solutions 
             | and approaches
-
-      div.working_container.spolier_block
+            
+      div.about-us_column.working_column.spolier_block
         h3
           | BENEFITS WORKING WITH US
         button.spolier_button
-        div.spolier_text(tabindex='0')
+        div.spolier_text
           p
             | Free and unlimited technical consultations during the project
           p
@@ -56,4 +55,5 @@ section.section-about-us#about_us
             | attitude
           p
             | Individual approach to each project and its requirements
+       
 // End about_us
