--- a/dev/pug/layout/header.pug
+++ b/dev/pug/layout/header.pug
@@ -50,7 +50,8 @@ header.site-header#home
           a.site-nav_link(href="#contact") Contact
 
     div.lang-selection
-      | en
+      span
+        | en
   
   section.site-header_container.header-content
     div.header-title
