--- a/dev/css/sections/_services.scss
+++ b/dev/css/sections/_services.scss
@@ -7,7 +7,7 @@
 }
 
 .services_title {
-    flex: 28%;
+    width: 28%;
     h2 {
         font-size: 56px;
         font-weight: bold;
@@ -31,7 +31,7 @@
     }
 }
 .services-column {
-    flex: 36%;
+    width: 36%;
     padding: 0 15px;
 }
 .services_item {
