--- a/dev/css/sections/_technologies.scss
+++ b/dev/css/sections/_technologies.scss
@@ -11,6 +11,7 @@
 
 .technologies-title {
   h2 {
+    font-weight: bold;
     font-size: 56px;
     text-transform: uppercase;
     margin-bottom: 60px;
