--- a/dev/layout/services.html
+++ b/dev/layout/services.html
@@ -2,16 +2,16 @@
 <!-- Start services code-->
 <section class="section-services" id="services">
   <div class="container">
-    <div class="services_title">
-      <h2>What can we do for you? </h2>
-      <p>
-         A to Z project cycle: <br/>
-        Planning, Design, Coding, Optimization,
-        Testing, Auditing and e-Marketing 
-      </p>
-    </div>
-    <div class="services-column">
-      <div class="services_item">
+    <div class="services_content services_grid__container block_slider">
+      <div class="services_title services_title_grid">
+        <h2>What can we do for you? </h2>
+        <p>
+           A to Z project cycle: <br/>
+          Planning, Design, Coding, Optimization,
+          Testing, Auditing and e-Marketing 
+        </p>
+      </div>
+      <div class="services_item web-desing_grid">
         <div class="services_item_title">
           <h3 class="web-desing">Web development</h3>
         </div>
@@ -23,7 +23,7 @@
           </p>
         </div>
       </div>
-      <div class="services_item">
+      <div class="services_item consultancy_grid">
         <div class="services_item_title">
           <h3 class="consultancy">
              Consultancy </h3>
@@ -37,9 +37,7 @@
           </p>
         </div>
       </div>
-    </div>
-    <div class="services-column">
-      <div class="services_item">
+      <div class="services_item merketing_grid">
         <div class="services_item_title">
           <h3 class="merketing">Internet Marketing </h3>
         </div>
@@ -55,7 +53,7 @@
           </p>
         </div>
       </div>
-      <div class="services_item">
+      <div class="services_item support_grid">
         <div class="services_item_title">
           <h3 class="support">Support</h3>
         </div>
