--- a/dev/pug/layout/about_us.pug
+++ b/dev/pug/layout/about_us.pug
@@ -1,7 +1,7 @@
 // Start about_us
 section.section-about-us#about_us
   div.container
-    div.about-us_content
+    div.about-us_content.block_slider
       div.about-us_column.who-are-we_column.spolier_block
         h3 
           | WHO ARE WE
@@ -31,7 +31,6 @@ section.section-about-us#about_us
       div.about-us_column.goals_column.spolier_block
         h3
           | OUR GOALS AND OBJECTIVES
-        button.spolier_button
         div.spolier_text
           p
             | Long term relations with customers and their full satisfaction
@@ -44,7 +43,6 @@ section.section-about-us#about_us
       div.about-us_column.working_column.spolier_block
         h3
           | BENEFITS WORKING WITH US
-        button.spolier_button
         div.spolier_text
           p
             | Free and unlimited technical consultations during the project
