--- a/dev/pug/layout/services.pug
+++ b/dev/pug/layout/services.pug
@@ -1,16 +1,16 @@
 // Start services code
 section.section-services#services
   div.container
-    div.services_title
-      h2
-        | What can we do for you? 
-      p 
-        | A to Z project cycle: #[br]
-        | Planning, Design, Coding, Optimization,
-        | Testing, Auditing and e-Marketing 
+    div.services_content.services_grid__container.block_slider
+      div.services_title.services_title_grid
+        h2
+          | What can we do for you? 
+        p 
+          | A to Z project cycle: #[br]
+          | Planning, Design, Coding, Optimization,
+          | Testing, Auditing and e-Marketing 
 
-    div.services-column
-      div.services_item
+      div.services_item.web-desing_grid
         div.services_item_title
           h3.web-desing
             | Web development
@@ -21,8 +21,7 @@ section.section-services#services
             | We can help you creating a proper development plan, 
             | shape your ideas into specific product or take care of your existing framework
 
-
-      div.services_item
+      div.services_item.consultancy_grid
         div.services_item_title
           h3.consultancy 
             | Consultancy 
@@ -34,8 +33,7 @@ section.section-services#services
             | research and competitive analysis as well as in finding proper 
             | technological approaches to comply with set objectives
 
-    div.services-column
-      div.services_item
+      div.services_item.merketing_grid
         div.services_item_title
           h3.merketing
             | Internet Marketing 
@@ -51,7 +49,8 @@ section.section-services#services
             | and dynamic way it won’t get many views without a proper employment 
             | of strategic internet marketing that comes to help your website or
             | a page getting more traffic, visitors and page views
-      div.services_item
+      
+      div.services_item.support_grid
         div.services_item_title
           h3.support
             | Support
