--- a/dev/css/sections/_contact.scss
+++ b/dev/css/sections/_contact.scss
@@ -11,6 +11,7 @@
   
 .contact-title {
     h2 {
+        font-weight: bold;
         font-size: 56px;
         text-transform: uppercase;
         margin-bottom: 60px;
