--- a/dev/css/sections/_services.scss
+++ b/dev/css/sections/_services.scss
@@ -5,14 +5,15 @@
     padding-bottom: 130px;
     color: #fff;
 }
-
+.services_content {
+    width: 100%;
+}
 .services_title {
-    width: 28%;
     h2 {
         font-size: 56px;
         font-weight: bold;
         margin-bottom: 55px;
-        padding-right: 65px;
+        text-transform: uppercase;
     }
 
     p {
@@ -30,16 +31,9 @@
         }
     }
 }
-.services-column {
-    width: 36%;
-    padding: 0 15px;
-}
+
 .services_item {
-    padding-left: 55px;
-    padding-right: 55px;
-    &:not(:last-child) {
-        margin-bottom:80px;
-    }
+
     .services_item_title{
         margin-bottom: 35px;
     }
@@ -49,6 +43,7 @@
     }
 
     h4 {
+        font-weight: bold;
         margin-bottom: 15px;
         line-height: 1.15;
     }
@@ -79,4 +74,68 @@
         background-image: url('../img//support-logo.png');
     }
 }
+
+
+
+
+
+.services_grid__container{
+    display: grid;  
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-template-areas: "services_title web-desing merketing" 
+    "services_title consultancy support";
+    display: -ms-grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: auto auto;
+    }
+
+  
+  .services_title_grid { 
+    margin-right: 100px;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+      grid-area: services_title; 
+    }
+  
+  .web-desing_grid {
+    margin-bottom: 80px;
+    margin-right: 50px;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+      grid-area: web-desing; 
+    }
+  
+  .consultancy_grid {
+    margin-right: 50px;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+      grid-area: consultancy; 
+    }
+  
+  .merketing_grid {
+    margin-left: 50px;
+    margin-bottom: 80px;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+      grid-area: merketing; 
+    }
+  
+  .support_grid { 
+    margin-left: 50px;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+      grid-area: support; 
+    }
+
 /*END SERVICES*/
