--- a/dev/layout/about_us.html
+++ b/dev/layout/about_us.html
@@ -2,7 +2,7 @@
 <!-- Start about_us-->
 <section class="section-about-us" id="about_us">
   <div class="container">
-    <div class="about-us_content">
+    <div class="about-us_content block_slider">
       <div class="about-us_column who-are-we_column spolier_block">
         <h3>
            WHO ARE WE</h3>
@@ -37,7 +37,6 @@
       </div>
       <div class="about-us_column goals_column spolier_block">
         <h3>OUR GOALS AND OBJECTIVES</h3>
-        <button class="spolier_button"></button>
         <div class="spolier_text">
           <p>Long term relations with customers and their full satisfaction</p>
           <p>Production of a solid product exceeding customer's expectations</p>
@@ -49,7 +48,6 @@
       </div>
       <div class="about-us_column working_column spolier_block">
         <h3>BENEFITS WORKING WITH US</h3>
-        <button class="spolier_button"></button>
         <div class="spolier_text">
           <p>Free and unlimited technical consultations during the project</p>
           <p>Up to 12h response time during business days and up to 24h on weekends</p>
