--- a/dev/pug/layout/header.pug
+++ b/dev/pug/layout/header.pug
@@ -34,7 +34,7 @@ header.site-header#home
         span.hamburger-box
           span.hamburger-inner
           
-      ul.site-nav_list
+      ul.site-nav_list#site-nav_scrollbar
         li.site-nav_item
          a.home_button(href="#home")
             img(src="img/home-logo.png", alt="home-logo")
