--- a/dev/css/sections/_header.scss
+++ b/dev/css/sections/_header.scss
@@ -65,11 +65,28 @@
             }
         }
     }    
-   
-
     &.site-nav_list__visible {
         left:0;
     }
+}
+
+
+#site-nav_scrollbar::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+	background-color: transparent;
+}
+
+#site-nav_scrollbar::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #737373;
+}
+
+#site-nav_scrollbar::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: transparent;
 }
 
 .home_button {
