--- a/dev/css/sections/_header.scss
+++ b/dev/css/sections/_header.scss
@@ -36,7 +36,6 @@
     align-items: center;
     padding-top: 30px;
     padding-bottom: 10px;
-    margin-bottom: 220px;
     position: relative;
 }
 
@@ -111,6 +110,7 @@
 }
 
 .header-content {
+    margin-top: 220px;
     flex-direction: column;
     align-items: center;
     text-align: center;
